<resources>
    <string name="app_name">PartyPlanner</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPW">Confirm Password</string>
    <string name="existingAccount">Already have an account?</string>
    <string name="forgotPW">Forgot your password?</string>
    <string name="noAccount">Don\'t have an account?</string>


    <string name="logo">App Logo</string>
    <string name="googleIcon">Google Icon</string>
    <string name="twitterIcon">Twitter Icon</string>
    <string name="facebookIcon">Facebook Icon</string>
    <string name="loginContainer">Login Container</string>
    <string name="signupContainer">Sign Up Container</string>
    <string name="dashboardContainer">Dashboard Container</string>
    <string name="partyButton">Party Button</string>
    <string name="eventButton">Event Button</string>
    <string name="contactButton">Contact Button</string>
    <string name="budgetButton">Budget Button</string>
    <string name="settingsIcon">Settings</string>
    <string name="mailIcon">Mail</string>
    <string name="userIcon">User Icon</string>

    <string name="noParties">No Parties Planned</string>
    <string name="noTasks">No Tasks Planned</string>
    <string name="noGuests">No Guests Invited</string>

    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="partyName">Party Name</string>
    <string name="typeOfParty">Type of Party</string>
    <string name="partyType">Party Type</string>
    <string name="location">Location</string>
    <string name="partyLocation">Party Location</string>
    <string name="partyDescription">Party Description</string>
    <string name="shortPartyDescription">Short Description of the Party</string>
    <string name="dateTime">Date and Time</string>
    <string name="selectDate">SELECT DATE</string>
    <string name="selectTime">SELECT TIME</string>
    <string name="addGuests">Invite Party Guests</string>
    <string name="addTasks">Add Party Tasks</string>

    <string name="taskName">Task Name</string>
    <string name="taskCategory">Task Category</string>
    <string name="note">Note</string>
    <string name="taskNote">Task Note</string>
    <string name="subtasks">Subtasks</string>
    <string name="taskList">Task List</string>
    <string name="guestList">Guest List</string>

    <string name="notStartedStatus">Not Started</string>
    <string name="pendingStatus">Pending</string>
    <string name="completeStatus">Complete</string>
    <string name="subtaskValue">Subtasks: 0/10</string>
    <string name="plus">+</string>

    <string name="party">Parties</string>
    <string name="event">Events</string>
    <string name="contact">Contacts</string>
    <string name="budget">Budget</string>
    <string name="partyPlan">Party Planning</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="logout">Log Out</string>

    <string name="noInvite">No Party Invitations</string>
    <string name="hostName">Host Name</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="forgot_password">Forgot password</string>
    <string name="submit">Submit</string>

    <string name="subtaskName">Subtask Name</string>
    <string name="noContacts">No Contacts</string>
    <string name="contactName">Contact Name</string>
    <string name="contactEmail">Contact Email</string>
    <string name="noBudget">No Budgets</string>
    <string name="budgetName">Budget Name</string>
    <string name="budgetAmount">Budget Amount</string>

    <string name="confirm">Confirm</string>
    <string name="add">Add</string>
    <string name="help">Help</string>
    <string name="invitation">Invitation</string>
    <string name="edit">Edit</string>
    <string name="payment">Payments</string>
    <string name="paymentName">Payment Name</string>
    <string name="amount">Amount</string>

    <string name="upParty">Upcoming Parties</string>
    <string name="pastParty">Past Parties</string>
    <string name="myParty">My Upcoming Parties</string>
    <string name="inviteParty">Invited Parties</string>
    <string name="noEvent">No Upcoming Events</string>


</resources>