<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/user_icon" />
                <item
                    android:id="@+id/nav_about"
                    android:title="@string/about"
                    android:icon="@drawable/info_icon_foreground" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout_icon_foreground" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/partyPlan">
            <menu>
                <item
                    android:id="@+id/nav_parties"
                    android:title="@string/party"
                    android:icon="@drawable/party_icon" />
                <item
                    android:id="@+id/nav_events"
                    android:title="@string/event"
                    android:icon="@drawable/event_icon" />
                <item
                    android:id="@+id/nav_contacts"
                    android:title="@string/contact"
                    android:icon="@drawable/contacts_icon" />
                <item
                    android:id="@+id/nav_budget"
                    android:title="@string/budget"
                    android:icon="@drawable/budget_icon" />
            </menu>
        </item>
    </group>

</menu>