<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/iceberg"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/loginContainer"
        app:layout_constraintTop_toBottomOf="@+id/logo2" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="201dp"
        android:layout_height="193dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/loginContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/loginContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:srcCompat="@drawable/logincontainer" />

    <EditText
        android:id="@+id/emailLoginTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_background"
        android:ems="6"
        android:fontFamily="@font/oswald"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="1dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/loginContainer"
        app:layout_constraintStart_toStartOf="@+id/loginContainer"
        app:layout_constraintTop_toTopOf="@+id/loginContainer" />

    <EditText
        android:id="@+id/pwLoginTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/textbox_background"
        android:ems="6"
        android:fontFamily="@font/oswald"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="1dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/loginContainer"
        app:layout_constraintStart_toStartOf="@+id/loginContainer"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginTB" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/oswald"
        android:text="@string/forgotPW"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/pwLoginTB"
        app:layout_constraintTop_toBottomOf="@+id/pwLoginTB" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/iceberg"
        android:background="@drawable/button_background"
        android:onClick="loginClick"
        app:layout_constraintBottom_toBottomOf="@+id/loginContainer"
        app:layout_constraintEnd_toEndOf="@+id/loginContainer"
        app:layout_constraintStart_toStartOf="@+id/loginContainer" />

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/oswald"
        android:text="@string/noAccount"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginContainer" />

    <TextView
        android:id="@+id/signUpTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/oswald"
        android:onClick="signupPageClick"
        android:text="@string/signup"
        android:textColor="#008D84"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/noAccountText"
        app:layout_constraintStart_toEndOf="@+id/noAccountText" />

    <ImageView
        android:id="@+id/googleIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:onClick="googleClick"
        android:contentDescription="@string/googleIcon"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/loginContainer"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText"
        app:srcCompat="@drawable/googleicon" />

    <ImageView
        android:id="@+id/twitterIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:onClick="twitterClick"
        android:contentDescription="@string/twitterIcon"
        app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
        app:layout_constraintStart_toEndOf="@+id/googleIcon"
        app:layout_constraintTop_toTopOf="@+id/googleIcon"
        app:srcCompat="@drawable/twittericon" />

    <ImageView
        android:id="@+id/facebookIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="20dp"
        android:onClick="facebookClick"
        android:contentDescription="@string/facebookIcon"
        app:layout_constraintEnd_toEndOf="@+id/loginContainer"
        app:layout_constraintTop_toTopOf="@+id/googleIcon"
        app:srcCompat="@drawable/facebookicon" />


</androidx.constraintlayout.widget.ConstraintLayout>