<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Parties.EditPartyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_background"
            android:minHeight="?attr/actionBarSize"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/epName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/iceberg"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <EditText
        android:id="@+id/epNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/partyName"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/oswald"
        app:layout_constraintStart_toStartOf="@+id/epName"
        app:layout_constraintTop_toBottomOf="@+id/epName" />

    <TextView
        android:id="@+id/epType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/typeOfParty"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/iceberg"
        app:layout_constraintStart_toStartOf="@+id/epName"
        app:layout_constraintTop_toBottomOf="@+id/epNameText" />

    <AutoCompleteTextView
        android:id="@+id/epTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/partyType"
        android:ems="10"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/oswald"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="186dp"
        app:layout_constraintStart_toStartOf="@+id/epType"
        app:layout_constraintTop_toBottomOf="@+id/epType" />


    <TextView
        android:id="@+id/epLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/location"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/iceberg"
        app:layout_constraintStart_toStartOf="@+id/epType"
        app:layout_constraintTop_toBottomOf="@+id/epTypeText" />

    <EditText
        android:id="@+id/epLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/partyLocation"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/oswald"
        app:layout_constraintStart_toStartOf="@+id/epLocation"
        app:layout_constraintTop_toBottomOf="@+id/epLocation" />

    <TextView
        android:id="@+id/epDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/partyDescription"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/iceberg"
        app:layout_constraintStart_toStartOf="@+id/epLocation"
        app:layout_constraintTop_toBottomOf="@+id/epLocationText" />

    <EditText
        android:id="@+id/epDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/shortPartyDescription"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/oswald"
        app:layout_constraintStart_toStartOf="@+id/epDescription"
        app:layout_constraintTop_toBottomOf="@+id/epDescription" />

    <TextView
        android:id="@+id/epDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/iceberg"
        android:text="@string/dateTime"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/epDescription"
        app:layout_constraintTop_toBottomOf="@+id/epDescriptionText" />

    <EditText
        android:id="@+id/epDateTimeText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/oswald"
        android:hint="Date"
        android:inputType="date"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/epDateTime"
        app:layout_constraintTop_toBottomOf="@+id/epDateTime" />

    <Button
        android:id="@+id/epDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/oswald"
        android:text="@string/selectDate"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/epDateTimeText"
        app:layout_constraintStart_toEndOf="@+id/epDateTimeText"
        app:layout_constraintTop_toTopOf="@+id/epDateTimeText" />

    <EditText
        android:id="@+id/epTimeText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="time"
        android:hint="Time"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/oswald"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="@+id/epDateTimeText"
        app:layout_constraintTop_toBottomOf="@+id/epDateTimeText" />

    <Button
        android:id="@+id/epTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/oswald"
        android:text="@string/selectTime"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/epTimeText"
        app:layout_constraintStart_toEndOf="@+id/epTimeText"
        app:layout_constraintTop_toTopOf="@+id/epTimeText" />

    <Button
        android:id="@+id/epGuestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/addGuests"
        android:fontFamily="@font/oswald"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="addClick"
        app:layout_constraintStart_toStartOf="@+id/epTimeText"
        app:layout_constraintTop_toBottomOf="@+id/epTimeText" />

    <Button
        android:id="@+id/epTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTasks"
        android:fontFamily="@font/oswald"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="addClick"
        app:layout_constraintStart_toStartOf="@+id/epGuestButton"
        app:layout_constraintTop_toBottomOf="@+id/epGuestButton" />

</androidx.constraintlayout.widget.ConstraintLayout>